java/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: java-service 
spec:
  selector:
    app: my-java
  ports:
    - port: 80
      targetPort: 8123
  type: ClusterIP
